Fix layout issues for some devices

--- a/training2.css
+++ b/training2.css
@@ -900,7 +900,7 @@ strong {
 
 .tooltipWrap {
     height:400px;
-    width:426px;
+    width:425px;
     overflow:hidden;
     -webkit-overflow-scrolling:touch;
     background-size:85% auto !important;
